<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetailCategoryFragment">

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="16dp"
        android:text="@string/category_name" />

    <TextView
        android:id="@+id/tv_category_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="@string/category_singer" />

    <TextView
        android:id="@+id/tv_category_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="@string/category_duration" />

    <TextView
        android:id="@+id/tv_category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:text="@string/category_description" />

</LinearLayout>