<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NextHomeFrag">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="23sp"
        android:layout_marginBottom="12dp"
        android:text="@string/about_trending1" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardCornerRadius="9dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/descAlbum"
            android:src="@drawable/wecant" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="19sp"
        android:layout_marginBottom="5dp"
        android:text="@string/title_trending1" />

    <Button
        android:id="@+id/btn_detailFragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/about_detailFrag" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="23sp"
        android:layout_marginBottom="12dp"
        android:text="@string/about_trending2" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:cardCornerRadius="9dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/descAlbum"
            android:src="@drawable/pisah" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="19sp"
        android:layout_marginBottom="5dp"
        android:text="@string/title_trending2" />

    <Button
        android:id="@+id/btn_detailFragment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_detailFrag" />
</LinearLayout>